VTK - stop jumping.. :)

--- a/src/main/resources/web/themes/default/report/report.css
+++ b/src/main/resources/web/themes/default/report/report.css
@@ -4,7 +4,7 @@ body#vrtx-report-diagram h2 {
   margin-bottom: 20px;
 }
 
-body#vrtx-report-diagram h3 {
+body#vrtx-report-diagram div.vrtx-report-diagram h3 {
   margin-top: 0px;
 }
 
